<resources>
    <string name="app_name">Module Approval</string>
    <string name="tv_approval">审批</string>
    <string name="tv_approval_detail">审批详情</string>
    <string name="tv_wait_approval">待审批</string>
    <string name="tv_had_approval">已审批</string>
    <string name="tv_me_started">我发起的</string>
    <string name="tv_approval_installment">园区</string>
    <string name="tv_approval_filter">筛选</string>
    <string name="tv_pl_choice">请选择</string>
    <string name="tv_approval_type">审批类型</string>
    <string name="tv_approval_status">审批状态</string>
    <string name="tv_applicat">申请人:</string>
    <string name="tv_applicat_detail">申请人</string>
    <string name="tv_approval_wait">待审批</string>
    <string name="tv_approval_num">审批单号</string>
    <string name="tv_installment">园区</string>
    <string name="tv_apply_time">申请时间</string>
    <string name="tv_approval_time">审批时间</string>
    <string name="tv_approval_info">申请信息</string>
    <string name="tv_tiaoxian">条线</string>
    <string name="tv_plan_name">计划名称</string>
    <string name="tv_resource_classification">资源分类</string>
    <string name="tv_work_instruction">工作指导</string>
    <string name="tv_apply_start_time">申请开始时间</string>
    <string name="tv_work_order_type">工单类型</string>
    <string name="tv_work_order_code">工单编码</string>
    <string name="tv_dispatch_order_type">派工单类型</string>
    <string name="tv_work_order_responsible">工单负责人</string>
    <string name="tv_work_order_create_time">工单创建时间</string>
    <string name="tv_finish_time">完成截止时间</string>
    <string name="tv_delay_day">延期天数</string>
    <string name="tv_apply_reason">申请原因</string>
    <string name="tv_approval_msg">审批信息</string>
    <string name="tv_approval_sug">审批意见</string>
    <string name="tv_unpass">不通过</string>
    <string name="tv_pass">通过</string>
    <string name="tv_had_not_approval">已驳回</string>
    <string name="tv_approvaling">审批中</string>
    <string name="tv_basic_info">基本信息</string>
    <string name="tv_had_pass">已通过</string>
    <string name="tv_no_pass">未通过</string>
    <string name="tv_empty_sug">审批意见不能为空</string>
    <string name="tv_reset">重置</string>
    <string name="tv_execution_frequency">执行频率</string>
    <string name="text_no_data">暂无数据</string>
    <string name="tv_mine_approval">我审批的</string>
    <string name="tv_me">我</string>
    <string name="tv_for_apply">发起申请</string>
</resources>
