<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
         <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp">

        <TextView
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/blackTextColor"
            android:layout_centerInParent="true"
            android:text="@string/tv_pl_choice"
            android:layout_width="wrap_content"
            android:layout_height="44dp"/>
        <ImageView
            android:id="@+id/iv_close"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/iv_pop_close"
            android:layout_marginRight="19dp"
            android:layout_width="11dp"
            android:layout_height="11dp"/>

    </RelativeLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/blackTextColor"
            android:layout_centerInParent="true"
            android:text="@string/tv_approval_type"
            android:layout_width="wrap_content"
            android:layout_height="44dp"/>
        <com.einyun.app.pms.approval.ui.widget.NoScrollGridview
            android:id="@+id/gv_approval_type"
            android:gravity="center"
            android:numColumns="3"
            android:verticalSpacing="5dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"/>
    </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ll_chirld_type"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
        <View
            android:layout_margin="15dp"
            android:background="@drawable/iv_pop_line"
            android:layout_width="wrap_content"
            android:layout_height="1dp"/>
        <com.einyun.app.pms.approval.ui.widget.NoScrollGridview
            android:id="@+id/gv_approval_child_type"
            android:numColumns="3"
            android:verticalSpacing="5dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"/>
    </LinearLayout>
        <LinearLayout
         android:id="@+id/ll_approval_state"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/blackTextColor"
            android:layout_centerInParent="true"
            android:text="@string/tv_approval_status"
            android:layout_width="wrap_content"
            android:layout_height="44dp"/>
        <com.einyun.app.pms.approval.ui.widget.NoScrollGridview
            android:id="@+id/gv_approval_status"
            android:numColumns="3"
            android:verticalSpacing="5dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"/>
    </LinearLayout>

    </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_marginTop="45dp"
        android:layout_width="match_parent"
        android:layout_height="44dp">
        <TextView
            android:background="@drawable/shape_little_blue"
            android:text="@string/tv_reset"
            android:gravity="center"
            android:textColor="@color/blueTextColor"
            android:id="@+id/cancle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="@dimen/font_size15" />
        <TextView

            android:id="@+id/ok"
            android:background="@drawable/iv_pop_confirm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>
</RelativeLayout>